[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = { version = "0.7", features = ["rustls"] }
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["macros"] }
rcgen = "0.8"
rustls = { version = "0.19", features = ["quic", "dangerous_configuration"] }
webpki = { version = "0.21" }
